<resources>
    <string name="app_name">POCAssignment</string>
    <string name="airi">Airi</string>
    <string name="get_your_food_online">Get your food online</string>
    <string name="getting_all_fresh">Getting all fresh</string>
    <string name="food_recipes">food recipes</string>
    <string name="all_chest_certified_make_food_fresh_recipes_for_you">All chest certified make food fresh recipes for you</string>
    <string name="we_promise">We promise</string>
    <string name="fast_delivery">fast delivery</string>
    <string name="our_driver_is_professional_to_send_food_and_promised_delivered">Our driver is professional to send food and promised delivered</string>
    <string name="we_made_payment">We made payment</string>
    <string name="is_easy">is easy</string>
    <string name="payment_support_credit_card_and_paypal_features">Payment support credit card and paypal features</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_credential_login">Enter your credential login</string>
    <string name="email">Email</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="fill_your_account_details">Fill your account details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email_address_to_rest_your_password_instruction">Enter your email address to rest your password instruction</string>
    <string name="send_link">Send link</string>
    <string name="i_can_t_recover_my_account_using_this_page">I can\'t recover my account using this page</string>
    <string name="register_phone">Register phone</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_mobile_number_to_enable_2_step_verification">Enter your mobile number to enable 2-step verification</string>
    <string name="continue_text">Continue</string>
    <string name="password">Password</string>
    <string name="phone_verification">Phone verification</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="notification">Notification</string>
    <string name="stay_notified_about_new_food_updates_menu_and_recipes">Stay notified about new food, updates, menu and recipes</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="don_t_allow">Don\'t allow</string>
    <string name="hi_jack">Hi, Jack!</string>
    <string name="get_ready_to_breakfast">Get ready to breakfast</string>
    <string name="update_at">Update at</string>
    <string name="at_17_17">at 17.17</string>
    <string name="recent">Recent</string>
    <string name="_56">56</string>
    <string name="items">Items</string>
    <string name="done_in">Done in</string>
    <string name="_10">10</string>
    <string name="books">books</string>
    <string name="explore">Explore</string>
    <string name="_4_new">4 New!</string>
    <string name="personal_offers">Personal Offers</string>
    <string name="see_all">See all</string>
    <string name="shop">Shop</string>
    <string name="discount_up_to_50">Discount up to 50%</string>
    <string name="discount_up_to">Discount up to</string>
    <string name="_40">40%</string>
    <string name="_4hrs_remaining">4hrs Remaining</string>
    <string name="_4_new_new"><![CDATA[4 New! >]]></string>
    <string name="top_orders">Top Orders</string>
    <string name="kue_dadar">Kue Dadar</string>
    <string name="mandala">Mandala</string>
    <string name="_350a">350a</string>
    <string name="_4_9">4.9</string>
    <string name="_1">1</string>
    <string name="about_product">About product</string>
    <string name="pizza_food_and_cola_drink_is_brighten_to_your_mind_and_will_be_wanting_more_food_than_now_i_m_sure_this_so_call_me_later">Pizza food and cola drink is brighten to your mind and will be wanting more food than now , I\'m sure this, so call me later .</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_45">45</string>
    <string name="search_something">Search Something</string>
    <string name="latest_orders">Latest Orders</string>
    <string name="orders">Orders</string>
    <string name="pizza_tomato">Pizza Tomato</string>
    <string name="_11_99">$11.99</string>
    <string name="popular">Popular</string>
    <string name="see_all_all"><![CDATA[See all   >]]></string>
    <string name="break_french_toast">Break french Toast</string>
    <string name="breakfast">Breakfast</string>
    <string name="telur_dadar">Telur Dadar</string>
    <string name="mandalika">Mandalika</string>
    <string name="_14_99">$14.99</string>
    <string name="ingredient">Ingredient</string>
    <string name="_22_reviews">22 Reviews</string>
    <string name="trade">Trade</string>
    <string name="_10_recipes_best">10 recipes best</string>
    <string name="for_breakfast">for breakfast</string>
    <string name="salad">Salad</string>
    <string name="for_you">For you</string>
    <string name="juicy_lucky_burger">Juicy Lucky burger</string>
    <string name="min">Min</string>
    <string name="_24_ago">24 ago</string>
    <string name="delivery">Delivery</string>
    <string name="card_not_set">Card not set</string>
    <string name="today_is_good_for_you_to_make_a_choice">Today is good for you to make a choice</string>
    <string name="add_new_card">Add new card</string>
    <string name="name">Name</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="exp_date">Exp date</string>
    <string name="save_card">Save card</string>
    <string name="cart">Cart</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="oct_2019">Oct 2019</string>
    <string name="total">Total :</string>
    <string name="_0">$0</string>
    <string name="receipt">Receipt</string>
    <string name="current_balance">Current Balance</string>
    <string name="_2740_11">$2740.11</string>
    <string name="wallets">Wallets</string>
    <string name="visa">VISA</string>
    <string name="display_statistic">Display statistic</string>
    <string name="bek_mic_organization">Bek mic organization</string>
    <string name="source_of_fund">Source of Fund</string>
    <string name="johnsayah_annacard">Johnsayah Annacard</string>
    <string name="_2704">*********2704</string>
    <string name="_09_20">09 / 20</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="label">Label</string>
    <string name="add_new_item">Add new item</string>
    <string name="check_out">Check Out</string>
    <string name="top_up">Top Up</string>
    <string name="existing_balance">Existing Balance</string>
    <string name="_0_0">$ 0.0</string>
    <string name="details">Details</string>
    <string name="add_card">Add card</string>
    <string name="enter_amount">Enter amount</string>
    <string name="set_manually">Set Manually</string>
    <string name="usd">USD</string>
    <string name="_145_99">$ 145.99</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="_2000">2000</string>
    <string name="_4000">4000</string>
    <string name="top_up_wallet">Top up wallet</string>
    <string name="top_up_success">Top Up Success!</string>
    <string name="has_been_added_to_your">has been added to your</string>
    <string name="account_balance">account balance</string>
    <string name="expense_on">Expense on</string>
    <string name="top_up_successful">Top Up Successful!</string>
    <string name="you_have_complete_top_up_payment">You have complete top up payment</string>
    <string name="topup_amount_paid">Topup amount paid</string>
    <string name="you_will_earn">You will earn</string>
    <string name="_202_points">202 points</string>
    <string name="jack_narrow">Jack Narrow</string>
    <string name="change">Change</string>
    <string name="street_pagung_kaul_siemon">Street Pagung Kaul ,Siemon</string>
    <string name="yangyokarta_45349">Yangyokarta 45349</string>
    <string name="shopping_method">Shopping method</string>
    <string name="my_address">My Address</string>
    <string name="add_another_location">Add another location</string>
    <string name="work">Work</string>
    <string name="kanti_karli_jando">Kanti karli Jando</string>
    <string name="payment">Payment</string>
    <string name="broadindescess">Broadindescess</string>
    <string name="stopout">Stopout</string>
    <string name="_12_99">$ 12.99</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="_2">$ 2</string>
    <string name="_2740">******* 2740</string>
    <string name="delivery_to">Delivery to</string>
    <string name="_225_reviews">225 Reviews</string>
    <string name="add_your_thought_here">Add your thought here</string>
    <string name="submit">Submit</string>
    <string name="rate_your_order">Rate your order</string>
    <string name="delivery_progress">Delivery progress</string>
    <string name="_30_min">30 min</string>
    <string name="complete_at">Complete at</string>
    <string name="_8_39_am">8 : 39 AM</string>
    <string name="arrived_order">Arrived Order</string>
    <string name="on">on</string>
    <string name="stemon_diy">Stemon DIY</string>
    <string name="delivery_on_the_way">Delivery on the way</string>
    <string name="driver_puck_up_item_at">Driver puck up item at</string>
    <string name="_8_00_am">8 : 00 AM</string>
    <string name="hurray">Hurray!</string>
    <string name="complete">Complete</string>
    <string name="view_all">View all</string>
    <string name="french_pizza_spicy">French Pizza Spicy</string>
    <string name="delivered">DELIVERED</string>
    <string name="_25_02">-$ 25.02</string>
    <string name="_9_oct">9 Oct</string>
    <string name="transaction">Transaction</string>
    <string name="current_rate_153">Current rate [#] 153</string>
    <string name="update_at_17_17">Update at 17.17</string>
    <string name="_23_min">23 min</string>
    <string name="skip">Skip</string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="tell_us_about_your_experience">Tell us about your experience</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="write_your_suggestion_here">Write your suggestion here</string>
    <string name="ex_feedback">Ex . feedback</string>
    <string name="_100_chars">100 chars</string>
    <string name="back_to_home">Back to home</string>
    <string name="senior_food_traveller">Senior food traveller</string>
    <string name="message">Message</string>
    <string name="favorite">Favorite</string>
    <string name="wishlist">WishList</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="my_favorite">My Favorite</string>
    <string name="brust">Brust</string>
    <string name="snack">Snack</string>
    <string name="me">Me</string>
    <string name="lemark">Lemark</string>
    <string name="_70">$ 70</string>
    <string name="teron">Teron</string>
    <string name="b_jan">B-Jan</string>
    <string name="_74">$ 74</string>
    <string name="best_selling">Best Selling</string>
    <string name="hot">Hot</string>
    <string name="dean_jones">Dean Jones</string>
    <string name="code_a1101">Code - A1101</string>
    <string name="today">Today</string>
</resources>