<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_15"
    tools:context=".fragments.Intro1">

    <RelativeLayout
        android:id="@+id/llRegisterTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginTop="@dimen/marginTop_20"
        android:orientation="horizontal"
        >
        <ImageView

            android:layout_width="@dimen/imageIconSize"
            android:layout_height="@dimen/imageIconSize"
            android:src="@drawable/ic_back"
            android:layout_gravity="center"
            android:background="@drawable/background_icon"
            />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_20"
        android:text="@string/delivery"
        android:fontFamily="@font/robotoslab_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_color_bottom"
        android:layout_marginTop="@dimen/marginTop_20"
        android:orientation="vertical"
        android:padding="@dimen/padding_15"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/marginTop_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jack_narrow"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@color/orange_medium"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_pagung_kaul_siemon"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="@dimen/marginTop_10"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yangyokarta_45349"
            android:textColor="@android:color/darker_gray"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_10"
            android:background="@drawable/background_bottom_color_gray_light"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/shopping_method"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_alignParentEnd="true"
                android:src="@drawable/right_arrow_white"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_15"
        android:layout_marginTop="@dimen/marginTop_10"
        android:text="@string/my_address"
        android:fontFamily="@font/robotoslab_bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_bottom_color_gray"
        android:padding="@dimen/padding_15"
        android:layout_marginTop="@dimen/marginTop_20"

        >
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_add"
            android:layout_marginLeft="@dimen/margin_left_10"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_20"
            android:text="@string/add_another_location"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_18"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_30"
        android:background="@drawable/background_bottom_color_gray"
        android:orientation="horizontal"
        android:padding="@dimen/padding_15"
        android:paddingLeft="@dimen/paddingLeft_20">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_orange_medium"
            android:gravity="center"
            android:padding="@dimen/padding_15">

            <ImageView
                android:id="@+id/ivBasket"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_baseline_location_on_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_20"
                android:text="@string/work"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_20"
                android:layout_marginTop="@dimen/marginTop_10"
                android:text="@string/kanti_karli_jando"
                android:textSize="@dimen/textSize_15" />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_color_bottom"
            android:layout_marginBottom="@dimen/marginBottom_20"
            android:layout_alignParentBottom="true"
            android:text="@string/continue_text"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>




</LinearLayout>