<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".fragments.Intro1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_15"
        android:gravity="center"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dimen_270"
            android:layout_height="@dimen/dimen_270"
            android:src="@drawable/let_logo"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_25"
            android:fontFamily="@font/robotoslab_bold"
            android:layout_marginTop="@dimen/marginTop_30"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/top_up_success"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_25"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/marginTop_10"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/_2740_11"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_18"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginTop_10"
            android:text="@string/has_been_added_to_your"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_18"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/account_balance"
            android:textColor="@android:color/darker_gray"
            />
        <Button
            android:id="@+id/btnBackToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_color_bottom"
            android:layout_marginTop="@dimen/marginTop_30"
            android:text="@string/back_to_home"
            android:textColor="@android:color/white"
            />
    </LinearLayout>


</LinearLayout>