<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activities.TopUpSuccessActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_15"
        >

        <ImageView
            android:id="@+id/ivCloseBtn"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_cross"
            android:background="@drawable/background_icon"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivCloseBtn"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_20"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/top_up"
                android:textColor="@android:color/white"
                />
        </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dimen_270"
            android:layout_height="@dimen/dimen_270"
            android:src="@drawable/let_logo"
            android:layout_gravity="center"
            android:elevation="1dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_25"
            android:fontFamily="@font/robotoslab_bold"
            android:layout_marginTop="@dimen/marginTop_30"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/top_up_successful"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_15"
            android:fontFamily="@font/robotoslab_bold"
            android:layout_marginTop="@dimen/marginTop_10"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/you_have_complete_top_up_payment"
            android:textColor="@android:color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_15"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginTop_30"
            android:text="@string/topup_amount_paid"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_20"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/marginTop_10"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/_145_99"
            android:textColor="@android:color/white"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_18"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/you_will_earn"
                android:textColor="@android:color/darker_gray"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_18"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/_202_points"
                android:layout_marginLeft="@dimen/margin_left_10"
                android:textColor="@color/orange_medium"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>